--- a/index.html
+++ b/index.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Cookies alert</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body onload="showModal()">
+<div id="modalBox">
+    <img src="images/cookies.png" class="cookies" alt="">
+    <p>We use cookies to optimize user experience and content.</p>
+    <button type="button" onclick="closeModal()">Accept</button>
+    <img src="images/close.png" class="close-icon" onclick="closeModal()" alt="">
+</div>
+<script>
+    let modalBox = document.getElementById("modalBox")
+
+    function showModal(){
+        setTimeout(() => {
+            modalBox.style.display = "block";
+        }, 2000);
+    }
+    function closeModal(){
+        modalBox.style.display = "none"
+    }
+</script>
 </body>
 </html>
